# quax-uploader

./: .gitignore  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  shell.nix
app/: main.py
src/: main.js  style.css
static/css/: style.css
static/js/: main.js
templates/: base.html  index.html
tmp_uploads/: README.md
