[project]
name = "quax-uploader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.136.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.26",
    "uuid7>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
